2010-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Increase Version: to 0.2.1

	* src/RInside.cpp: Change startup so that interactive() comes out FALSE,
	  with that no longer call Rf_KillAllDevices(); as we may not have
	  had devices in the first place.

	* src/RInside.h: Logging helper protected by #ifndef as it is in Rcpp too

	* tools/unix2dos.r: Simple CRLF -> LF filter to nuke a Windows warning
	* src/Makefile.win: Employ unix2dos.r on two autogenerated files

	* DESCRIPTON: Set Depends: to R (>= 2.10.0) and Rcpp (>= 0.7.0)

	* src/*: Add full copyright headers and update copyright to 2010

2009-12-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/setenv.c: Minor error case fix for Windows
	* DESCRIPTON: Lower requirement for Rcpp to (>= 0.6.7)

2009-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Increase Version: to 0.2.0

	* src/setenv: Another small cleanup
	* inst/THANKS: Added Richard for all the initial help with Windows

	* src/RInside.cpp: Uncommented fpu_setup() for now

	* inst/doc/{html,man.latex}: Removed autogenerated doxygen files from
	  svn as they are too volatile, will remain in tarball as for Rcppccd 

2009-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/tools/RInsideEnvVars.r: Deal with slashed on Windows platform

2009-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Remove 'OS_type: unix' as we now build and run on Windoze
	* src/Makefile.win: src/RInside.h, src/RInside.cpp: Added support for
	  building on Windows using the standard MinGW toolchain
	* src/setenv.c: Windows implementation of setenv() kindly provided by
	  Richard Holbrey during earlier attempts to build on Windows
        * inst/examples/Makefile.win: Similarly Makefile for Windows examples

2009-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Destructor does a few additional things as per the
	  R_Cleanup example in section 8.1.2 on 'Setting R callbacks'